dons_tests/valid_kxi/class_scope.kxi
class MyClass { 
    public int x;
    static public char y;
    MyClass(int a, int b) {}
    public int[] myfunc() {}
}
class MyClass2 { 
    public int x;
    static public char y;
    MyClass2(int a, int b) {}
    public string main() {}
}
void main(){}
