dons_tests/invalid_kxi/invalid_main.kxi

            class MyClass { 
                public int x;
                static public char y;
                MyClass(int a, int b) {}
                public int[] myfunc() {}
            }
            void fred(){}
